# mnist-digits-as-stroke-sequences

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  runcmake
R/: constructInputData.R  extractStrokes_TSP.R  findEndpoints_rowcol.R  getPointList.R  plotImage.R  plotstrokes.R  processImages.R  removeSmallComponents.R  runExtraction.R  turn.R
connectedComponents/: connectedComponents.cpp  connectedComponents.h
createInputData/: createInputData.cpp
readImages/: readMNISTImages.cpp  readMNISTImages.h
